# insurance_enrollment_prediction

./: .gitignore  Dockerfile  README.MD  api.py  config.py  docker-compose.yml  gradio_app.py  main.py  pyproject.toml  report.md  report_tmp.html
models/: lightgbm.pkl  logistic_regression.pkl  random_forest.pkl
notebooks/: EDA.ipynb  LightGBM_expermentation.ipynb  logistic_regression_expermentation.ipynb  random_forest_expermentation.ipynb
results/metrics/: lightgbm_metrics.json  logistic_regression_metrics.json  random_forest_metrics.json
src/: data_processing.py  evaluate.py  feature_engineering.py  model.py  predict.py  train.py
tests/: test.py
