[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "fastapi>=0.129.0",
    "gradio>=6.5.1",
    "ipython>=9.10.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pillow>=12.1.1",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.19.0",
    "uvicorn[standard]>=0.40.0",
]
